fix(desktop details component): hide scrollbar
the scrollbar was causing the inner elements have extra padding applied

--- a/src/css/desktop-details.scss
+++ b/src/css/desktop-details.scss
@@ -43,3 +43,7 @@
     outline: -webkit-focus-ring-color auto 5px;
   }
 }
+
+.desktop-details-container::-webkit-scrollbar { 
+  display: none; 
+}
